<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/locify_logo"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal" />

        <!-- Email field -->
        <EditText android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:inputType="text"
            android:padding="4dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/signup_name"/>
        <!-- Email field -->
        <EditText android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:inputType="textEmailAddress"
            android:padding="4dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/login_email"/>

        <!-- Password field -->
        <EditText android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:inputType="textPassword"
            android:padding="4dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/login_password"/>

        <!-- Password confirm field -->
        <EditText android:id="@+id/signup_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:inputType="textPassword"
            android:padding="4dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/confirm_password"/>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            android:text="@string/create_account"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/login_link"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>
